--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <script>
       // The value below is injected by flutter build, do not touch.
-      var serviceWorkerVersion = '3426454158';
+      var serviceWorkerVersion = '233676301';
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
@@ -45,8 +45,23 @@
       as="fetch"
       crossorigin="anonymous"
     />
+    <style>
+      .container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .indicator {
+        width: 25vw;
+      }
+    </style>
   </head>
-  <body>
+  <body style="overflow: hidden">
+    <div id="loading_anim" class="container">
+      <img src="icon.gif" class="indicator" />
+    </div>
     <script>
       window.addEventListener("load", function (ev) {
         // Download main.dart.js
@@ -63,6 +78,16 @@
             return appRunner.runApp();
           });
       });
+    </script>
+    <script>
+      window.onload = function () {
+        setTimeout(() => {
+          var indicator = document.getElementById("loading_anim");
+          if (indicator) {
+            indicator.remove;
+          }
+        }, 30000);
+      };
     </script>
   </body>
 </html>
