--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Anand Suthar - Portfolio</title>
     <meta
       http-equiv="refresh"
-      content="0; url=https://ad956-portfolio.vercel.app/"
+      content="0; url=https://ad956.vercel.app/"
     />
   </head>
   <body>
     <p>
       If you are not redirected automatically, follow the
-      <a href="https://ad956-portfolio.vercel.app/">link to Portfolio</a>.
+      <a href="https://ad956.vercel.app/">link to Portfolio</a>.
     </p>
   </body>
 </html>
